--- a/netcat_template/class/181/Class.html
+++ b/netcat_template/class/181/Class.html
@@ -1,10 +1,17 @@
-<!-- FormPrefix --><?= $f_AdminCommon ;?><!-- /FormPrefix -->
+<!-- FormPrefix --><?= $f_AdminCommon ;?>
+<? if (!$isBlock): ?><h1 class="js_1_bl m-head-com">Новости</h1><? endif; ?>
+<!-- /FormPrefix -->
 
 <!-- RecordTemplate --><?= $f_AdminButtons ;?>
-                  <div class="newsbox<? if($isBlock and ($f_RowNum + 1) == $recNum) :?> last <? endif ;?>" <? if($f_RowNum == 0) :?> style="padding-top:0;" <? endif ;?>>
-                      <p class="date"><?= $f_Date_day.".".$f_Date_month.".".$f_Date_year ;?></p>
-                      <h3><a href="<?= $fullDateLink ;?>"><?= $f_Header ;?></a></h3>
-                      <?= $f_Short ;?>
-                  </div><!-- /RecordTemplate -->
+<div class="newsbox<? if($isBlock and ($f_RowNum + 1) == $recNum) :?> last <? endif ;?><? if (!$isBlock): ?> js_1_bl short-news<? endif; ?>" <? if($f_RowNum == 0) :?> style="padding-top:5px; display: block !important;" <? else: ?> <? if (!$isBlock): ?> style="display: block !important;"<? endif; ?><? endif; ?>>
+    <p class="date<? if (!$isBlock): ?> all-news-date<? endif; ?>"><?= $f_Date_day.".".$f_Date_month.".".$f_Date_year ;?></p>
+    <? if (!$isBlock): ?><div class="context"><? endif; ?>
+        <h3><a href="<?= $fullDateLink ;?>"><?= $f_Header ;?></a></h3>
+        <?= $f_Short ;?>
+    <? if (!$isBlock): ?></div><? endif; ?>
+</div><!-- /RecordTemplate -->
 
-<!-- FormSuffix --><?= (($prevLink || $nextLink) && !$isBlock ? browse_messages($cc_env, 10) : '') ;?><!-- /FormSuffix -->
+<!-- FormSuffix -->
+<? if (!$isBlock): ?><div class="js_1_bl" id="more-news"></div><? endif; ?>
+<? if (!$isBlock): ?><a class="add-news js_1_bl d-hid" data-start="10">загрузить еще</a><? endif; ?>
+<?= (($prevLink || $nextLink) && !$isBlock ? browse_messages($cc_env, 10) : '') ;?><!-- /FormSuffix -->
