--- a/netcat_template/class/181/RecordTemplate.html
+++ b/netcat_template/class/181/RecordTemplate.html
@@ -1,8 +1,10 @@
 <?/* Служебная часть */for ($f_RowNum = 0; $f_RowNum < $rowCount; $f_RowNum++) {    if($fetch_row[$f_RowNum] instanceof Iterator) {        extract($fetch_row[$f_RowNum]->to_array(), EXTR_PREFIX_ALL, "f");    } else {        extract($fetch_row[$f_RowNum], EXTR_PREFIX_ALL, "f");    }    foreach($iteration_RecordTemplate[$f_RowNum] as $value) {        extract($value);    }    eval($cc_env["convert2txt"]);    ob_start();/* Конец служебной части */?>
 <?= $f_AdminButtons ;?>
-                  <div class="newsbox<? if($isBlock and ($f_RowNum + 1) == $recNum) :?> last <? endif ;?>" <? if($f_RowNum == 0) :?> style="padding-top:0;" <? endif ;?>>
-                      <p class="date"><?= $f_Date_day.".".$f_Date_month.".".$f_Date_year ;?></p>
-                      <h3><a href="<?= $fullDateLink ;?>"><?= $f_Header ;?></a></h3>
-                      <?= $f_Short ;?>
-                  </div>
+<div class="newsbox<? if($isBlock and ($f_RowNum + 1) == $recNum) :?> last <? endif ;?><? if (!$isBlock): ?> js_1_bl short-news<? endif; ?>" <? if($f_RowNum == 0) :?> style="padding-top:5px; display: block !important;" <? else: ?> <? if (!$isBlock): ?> style="display: block !important;"<? endif; ?><? endif; ?>>
+    <p class="date<? if (!$isBlock): ?> all-news-date<? endif; ?>"><?= $f_Date_day.".".$f_Date_month.".".$f_Date_year ;?></p>
+    <? if (!$isBlock): ?><div class="context"><? endif; ?>
+        <h3><a href="<?= $fullDateLink ;?>"><?= $f_Header ;?></a></h3>
+        <?= $f_Short ;?>
+    <? if (!$isBlock): ?></div><? endif; ?>
+</div>
 <?/* Служебная часть */    echo nc_finishing_RecordTemplate(ob_get_clean(), $inside_admin, $classID, $f_RowID, $parent_message, $cc, $cc_env["Class_Name"], $no_cache_marks);}/* Конец служебной части */?>
