fixes almost complete

--- a/netcat_template/class/195/FormPrefix.html
+++ b/netcat_template/class/195/FormPrefix.html
@@ -83,8 +83,12 @@
 	float: right;
 	text-align:right;
 }
-
+.d-hid {
+    display: none;
+}
 
 </style>
 <? endif ;?>
 <? if($oid) :?> <h2 class="letter">Благодарственное письмо</h2> <? endif ;?>
+<h1 class="js_1_bl m-head-com d-hid" style="padding: 10px 20px 13px;">Отзывы</h1>
+<div class="reviews js_1_bl">
