--- a/netcat_template/class/181/RecordTemplateFull.html
+++ b/netcat_template/class/181/RecordTemplateFull.html
@@ -1,12 +1,22 @@
-<p class="date"><?= $f_Date_day."".$f_Date_month."".$f_Date_year ;?></p>
-<div class="news-inner">
-<div class="news-short"><?= $f_Short ;?></div>
-<div class="news-text">
-<?= $f_TextContent ;?>
-<?= ($f_Letter_ID ? s_list_class(83, 203, "&oid=$f_Letter_ID") : '') ;?>
-
-<p class="tar">
-    <a class="button_blue" href="/news/">Все новости</a>
-</p>
-</div>
+<div id="one-news-cnt" class="js_1_bl">
+    <h1 class="m-head-com"><?= $f_Header ?></h1>
+    <div class="all-news">
+        <div class="one-news">
+            <div class="context">
+                <p class="date"><?= $f_Date_day.".".$f_Date_month.".".$f_Date_year ;?></p>
+            </div>
+            <div class="news-inner">
+                <div class="news-short"><?= $f_Short ;?></div>
+                <div class="news-text">
+                    <?= $f_TextContent ;?>
+                    <?= ($f_Letter_ID ? s_list_class(83, 203, "&oid=$f_Letter_ID") : '') ;?>
+                    <p class="tar">
+                        <a class="left" href="javascript:void(0);" id="news-show-prev" onclick="showPrevNews(this)" data-current="<?= $f_Message_ID ?>"></a>
+                        <a class="button-news send all-news-button" href="/news/" style="text-decoration: none;">Все новости</a>
+                        <a class="right" href="javascript:void(0);" id="news-show-next" onclick="showNextNews(this)" data-current="<?= $f_Message_ID ?>"></a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
